--- a/main.css
+++ b/main.css
@@ -57,19 +57,19 @@
     margin: 0 auto;  
     max-width: 1200px;
     padding: 0 1%; 
-    color:var(--dark-blue); 
+    color:black; 
     background-color: beige;
 
 
   }
   
   /*  ----- Page layout blocks -----  */
-  header {background-color:darkgrey ;
+  header {background-color:grey ;
           text-align: center;
           padding-top: 5%;
           padding-bottom: 5%;
           border:10px solid; 
-          border-color: var(--orange);
+          border-color: darkgray;
           line-height: 32px;
           
         }
@@ -78,14 +78,14 @@
   }
          
   main {color: var(--mauve); 
-        background-color: var(--cream-T);   
+        background-color: beige;   
         padding: 1% 3%;  
         
         }
   section {}
     article {
-              border-bottom: 3px dashed; 
-              border-color: var(--yellow)
+              border-bottom: 3px solid; 
+              border-color: darkgrey;
             }
       #topic1 {}
       #topic2 {}
@@ -119,9 +119,9 @@
        }
   nav a {
           border-radius: 20%;
-          background-color: var(--leaf-green);
+          background-color: grey;
           padding: 10px; 
-          color: var(--dark-blue);
+          color: black;
           margin:20px; 
           width: 200px;
           text-decoration: none;
@@ -129,8 +129,8 @@
         }
 
   nav a:hover { 
-                background-color: var(--dark-blue);
-                color: var(--cream)
+                background-color: var(--cream);
+                color: black
               }
   nav a:visited{
                    
