--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@
           border:8px solid; 
           border-color: darkgray;
           line-height: 50px;
-          font-family: Lunasima; 
+          font-family:Lumanosimo;
         
           
         }
