--- a/main.css
+++ b/main.css
@@ -118,6 +118,7 @@
         display:flex;
         flex-direction:row; 
         justify-content: center;
+        font-family:Lumanosimo;
        }
   nav a {
           border-radius: 20%;
