--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@
           border-color: darkgray;
           line-height: 50px;
           font-family:Lumanosimo;
+          font-size: 115%;
         
           
         }
