--- a/main.css
+++ b/main.css
@@ -73,17 +73,14 @@
           line-height: 50px;
           font-family:Lumanosimo;
           font-size: 200%;
-        
+          font-weight: bold;
           
         }
   header img{
     justify-content: center;
   }
          
-  main {color: var(--mauve); 
-        background-color: beige;   
-        padding: 1% 3%;  
-        
+  main {
         }
   section {}
     article {
@@ -95,13 +92,13 @@
   div {}
   aside {}
   footer {
-          background-color: var(--orange-T);
+          background-color: grey;
           text-align: center;
           padding-top: 5%;
           padding-bottom: 5%;
-          border:10px solid; 
-          border-color: var(--orange); 
-          color:var(--dark-blue); 
+          border:8px solid; 
+          border-color: darkgrey; 
+          color:black; 
           font-weight: bold;
   }
   
