--- a/main.css
+++ b/main.css
@@ -202,6 +202,13 @@
   var {}
   del {} 
   ins {}
+  /* ------ Center class ------ */ 
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
   
   /*  ----- Table ----- */
   table {width: 40%; }
