--- a/main.css
+++ b/main.css
@@ -204,10 +204,7 @@
   ins {}
   /* ------ Center class ------ */ 
   .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    text-align: center;
   }
   
   /*  ----- Table ----- */
