--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@
     --orange-T: rgba(253, 183, 105, 0.6); 
     --yellow:rgb(232,132,132); 
     --lavendar: rgba(172, 104, 201, 0.929); 
+    --lavendar-light: rgba(186, 147, 203, 0.929); 
     
 
     /*--custom-embellishment-name:; */
@@ -70,7 +71,7 @@
           padding-top: 5%;
           padding-bottom: 5%;
           border:8px solid; 
-          border-color: darkgray;
+          border-color: var(--lavendar-light);
           line-height: 50px;
           font-family:Lumanosimo;
           font-size: 200%;
