--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@
           padding-top: 5%;
           padding-bottom: 5%;
           border:8px solid; 
-          border-color: darkgray;
+          border-color: blueviolet;
           line-height: 50px;
           font-family:Lumanosimo;
           font-size: 200%;
