--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@
     --orange-T: rgba(253, 183, 105, 0.6); 
     --yellow:rgb(232,132,132); 
     --lavendar:rgb(223, 184, 245); 
+    --lightlavendar: rgb(234, 216, 245); 
     
 
     /*--custom-embellishment-name:; */
@@ -70,7 +71,7 @@
           padding-top: 5%;
           padding-bottom: 5%;
           border:8px solid; 
-          border-color: blueviolet;
+          border-color: var(--lightlavendar);
           line-height: 50px;
           font-family:Lumanosimo;
           font-size: 200%;
