--- a/main.css
+++ b/main.css
@@ -36,8 +36,8 @@
     --orange: rgb(253, 183, 105);
     --orange-T: rgba(253, 183, 105, 0.6); 
     --yellow:rgb(232,132,132); 
-    --lavendar:rgb(223, 184, 245); 
-    --lightlavendar: rgb(229, 204, 242); 
+    --lavendar:rgb(223, 166, 255); 
+    --lightlavendar: rgb(232, 190, 255); 
     
 
     /*--custom-embellishment-name:; */
@@ -94,12 +94,12 @@
   div {}
   aside {}
   footer {
-          background-color: grey;
+          background-color:var(--lavendar);
           text-align: center;
           padding-top: 5%;
           padding-bottom: 5%;
           border:8px solid; 
-          border-color: darkgrey; 
+          border-color: var(--lightlavendar); 
           color:black; 
           font-weight: bold;
   }
